# cryptoidol

./: .gitattributes  .gitignore  Dockerfile  README.md  api_key.py.example  app.py  docker-compose.yaml  init-letsencrypt.sh  nginx.conf  pyproject.toml  requirements.txt  settings.json  tasks.py
artifacts/: kzg.params  network.onnx  server_settings.json  settings.json  test.pk  test.sol
contracts/: .gitignore  crypto_idol.json  fetch_leaderboard.ts  package.json
contracts/scripts/: fetch_proof.sh
contracts/src/: Bounty.sol  CryptoIdol.sol
contracts/test/: Bounty.t.sol  CryptoIdol.t.sol
nginx/: nginx.conf
templates/: upload.html
