[tool.poetry]
name = "cryptoidol"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
ezkl = "^1.0.0"
ezkl-lib = "^0.3.0"
Flask = "^2.3.2"
celery = "^5.3.1"
paddlelibrosa = "^0.0.1"
redis = "^4.6.0"
librosa = "^0.10.0.post2"
setuptools = "^68.0.0"
maturin = "^1.1.0"
torch = [
    {url = "https://download.pytorch.org/whl/cpu/torch-2.0.0-cp38-none-macosx_11_0_arm64.whl", platform = "darwin", python = ">=3.8 <3.9"},
    {url = "https://download.pytorch.org/whl/cpu/torch-2.0.0-cp39-none-macosx_11_0_arm64.whl", platform = "darwin", python = ">=3.9 <3.10"},
    {url = "https://download.pytorch.org/whl/cpu/torch-2.0.0-cp310-none-macosx_11_0_arm64.whl", platform = "darwin", python = ">=3.10 <3.11"},
    {version="^2.0.1", source="pytorch-cpu", markers="(platform_system != \"Darwin\" or platform_machine != \"arm64\") and (platform_system != \"Linux\" or platform_machine != \"aarch64\")"}
]
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu/"
priority = "explicit"