[tool.poetry]
name = "cryptoidol"
version = "0.1.0"
description = "Sing to mint a collectible NFT"
authors = ["zkonduit"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.3.2"
paddlelibrosa = "^0.0.1"
librosa = "^0.10.0.post2"
setuptools = "^68.0.0"
gunicorn = "^20.1.0"
flask-cors = "^5.0.0"
pydub = "^0.25.1"
mclbn256 = "^1.3.2"
requests = "^2.31.0"
requests-toolbelt = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
